--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,10 @@ Title: R Interface for Tableau Services
 Version: 0.0.1.9001
 Authors@R: 
     person("Tomer", "Iwan", , "t.iwan@vu.nl", role = c("aut", "cre", "cph"))
-Description: Provides numerous functions to fill data.
-    These can be applied either to missing or skewed data.
-    The functions are designed within the scope of Student Analytics. 
+Description:  Providess an R interface for interacting with the Tableau Server. 
+    It allows users to perform various operations such as publishing workbooks, refreshing data extracts, 
+    and managing users using the Tableau REST API. Additionally, 
+    it includes functions to perform manipulations on local Tableau workbooks.
 URL: https://github.com/vusaverse/vvtableau
 License: MIT + file LICENSE
 Encoding: UTF-8
