--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: vvtableau
 Type: Package
-Title: R Interface for Tableau Services
+Title: R Interface for 'Tableau' Services
 Version: 0.0.1
 Authors@R: 
     person("Tomer", "Iwan", , "t.iwan@vu.nl", role = c("aut", "cre", "cph"))
-Description: Provides an R interface for interacting with the Tableau Server. 
+Description: Provides an R interface for interacting with the 'Tableau' Server.
     It allows users to perform various operations such as publishing workbooks, refreshing data extracts, 
-    and managing users using the Tableau REST API. Additionally, 
-    it includes functions to perform manipulations on local Tableau workbooks.
+    and managing users using the 'Tableau' REST API (see <https://help.tableau.com/current/api/rest_api/en-us/REST/rest_api_ref.htm> for details). Additionally, 
+    it includes functions to perform manipulations on local 'Tableau' workbooks.
 URL: https://github.com/vusaverse/vvtableau
 License: MIT + file LICENSE
 Encoding: UTF-8
