--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,3 +2,49 @@ url: https://vusaverse.github.io/vvtableau/
 template:
   bootstrap: 5
 
+reference:
+- title: Tableau REST API functions
+
+- subtitle: Download functions
+  desc: >
+    Functions to download content from Tableau Server.
+  contents:
+  - download_tableau_crosstab_excel
+  - download_tableau_data
+  - download_view_filtered
+  - download_workbook_server
+  - download_workbook_server_pdf
+  - download_workbook_server_powerpoint
+
+- subtitle: GET functions
+  desc: >
+    Function to retrieve data from Tableau Server.
+  contents:
+  - get_server_connected_applications
+  - get_server_datasources
+  - get_server_groups
+  - get_server_info
+  - get_server_jobs
+  - get_server_projects
+  - get_server_refresh_tasks
+  - get_server_schedules
+  - get_server_users
+  - get_server_views
+  - get_server_workbooks
+
+
+- title: Workbook functions
+  desc: >
+    Functions to interact with local Tableau workbooks.
+  contents:
+  - get_actions
+  - get_folders
+  - get_hierarchy
+  - get_parameters
+  - get_revision
+  - get_server_location
+  - get_variables
+  - get_variables_folders
+  - get_workbook_id
+  - get_workbook_tabs
+  - make_rootnodes
