edit: function reference

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -11,7 +11,7 @@ reference:
   contents:
   - download_tableau_crosstab_excel
   - download_tableau_data
-  - download_view_filtered
+  - download_filtered_tableau_image
   - download_workbook_server
   - download_workbook_server_pdf
   - download_workbook_server_powerpoint
