feat: get favorites for user on server

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(get_server_location)
 export(get_server_projects)
 export(get_server_refresh_tasks)
 export(get_server_schedules)
+export(get_server_user_favorites)
 export(get_server_users)
 export(get_server_views)
 export(get_server_workbooks)
