feat: remove user from group

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,4 +41,5 @@ export(get_variables)
 export(get_workbook_id)
 export(get_workbook_tabs)
 export(make_rootnodes)
+export(remove_user_from_group)
 importFrom(magrittr,"%>%")
