feat: get groups for user

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(download_workbooks_server_pdf)
 export(download_workbooks_server_powerpoint)
 export(get_actions)
 export(get_folders)
+export(get_groups_for_user)
 export(get_hierarchy)
 export(get_nodenames)
 export(get_parameter)
