feat: create and delete groups

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(adjust_tableau_font_style)
 export(adjust_tableau_size)
 export(authenticate_server)
 export(check_dashboard_names)
+export(create_group)
 export(download_filtered_tableau_image)
 export(download_tableau_crosstab_excel)
 export(download_tableau_data)
