feat: get user information

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,5 +43,6 @@ export(get_variables)
 export(get_workbook_id)
 export(get_workbook_tabs)
 export(make_rootnodes)
+export(query_user_on_site)
 export(remove_user_from_group)
 importFrom(magrittr,"%>%")
