feat: update groups and users

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,4 +45,6 @@ export(get_workbook_tabs)
 export(make_rootnodes)
 export(query_user_on_site)
 export(remove_user_from_group)
+export(update_group)
+export(update_user)
 importFrom(magrittr,"%>%")
