fix: missing @export tags in functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,11 @@ export(add_user_to_group)
 export(add_user_to_site)
 export(adjust_tableau_font_style)
 export(adjust_tableau_size)
+export(authenticate_PAT)
 export(authenticate_server)
 export(check_dashboard_names)
 export(create_group)
+export(delete_group)
 export(download_filtered_tableau_image)
 export(download_tableau_crosstab_excel)
 export(download_tableau_data)
@@ -38,6 +40,7 @@ export(get_server_views)
 export(get_server_workbooks)
 export(get_table_assets)
 export(get_tableau_data_source)
+export(get_users_in_group)
 export(get_variable_folders)
 export(get_variables)
 export(get_workbook_id)
@@ -45,6 +48,7 @@ export(get_workbook_tabs)
 export(make_rootnodes)
 export(query_user_on_site)
 export(remove_user_from_group)
+export(remove_user_from_site)
 export(update_group)
 export(update_user)
 importFrom(magrittr,"%>%")
