feat: download datasource

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(authenticate_server)
 export(check_dashboard_names)
 export(create_group)
 export(delete_group)
+export(download_datasource)
 export(download_filtered_tableau_image)
 export(download_tableau_crosstab_excel)
 export(download_tableau_data)
@@ -22,6 +23,7 @@ export(get_actions)
 export(get_folders)
 export(get_groups_for_user)
 export(get_hierarchy)
+export(get_mobile_security_settings)
 export(get_nodenames)
 export(get_parameter)
 export(get_revision)
