feat: get urls from tableau workbook

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(get_variable_folders)
 export(get_variables)
 export(get_workbook_id)
 export(get_workbook_tabs)
+export(get_workbook_urls)
 export(make_rootnodes)
 export(query_user_on_site)
 export(remove_user_from_group)
