--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(make_rootnodes)
 export(query_user_on_site)
 export(remove_user_from_group)
 export(remove_user_from_site)
+export(run_extract_refresh_task)
 export(update_group)
 export(update_user)
 importFrom(magrittr,"%>%")
