feat: update data source now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(query_user_on_site)
 export(remove_user_from_group)
 export(remove_user_from_site)
 export(run_extract_refresh_task)
+export(update_data_source_now)
 export(update_group)
 export(update_user)
 importFrom(magrittr,"%>%")
