feat: update workbook now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,4 +56,5 @@ export(run_extract_refresh_task)
 export(update_data_source_now)
 export(update_group)
 export(update_user)
+export(update_workbook_now)
 importFrom(magrittr,"%>%")
