--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: vvtableau
 Type: Package
 Title: R Interface for 'Tableau' Services
-Version: 0.6.0
+Version: 0.7.0
 Authors@R: 
   c(person(given = "Tomer", 
            family = "Iwan", 
@@ -12,7 +12,11 @@ Authors@R:
            family = "Korvinus",
            role = "ctb"
            ),
-    person(given = "VU Analytics",
+    person(given = "Jorn",
+           family = "Amatdoelrasit",
+           role = "ctb"
+           ),
+     person(given = "VU Analytics",
            role = "cph"
            ))
 Description: Provides an R interface for interacting with the 'Tableau' Server.
@@ -24,7 +28,7 @@ URL: https://github.com/vusaverse/vvtableau,
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Imports: 
     data.table,
     dplyr,
